--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,17 +1,19 @@
 {
-  "name": "Python 3.11 Environment",
-  "image": "mcr.microsoft.com/devcontainers/python:3.11",
-  "features": {
-    "ghcr.io/devcontainers/features/python:1": {
-      "version": "3.11"
-    }
+  "image": "mcr.microsoft.com/devcontainers/universal:2",
+  "hostRequirements": {
+    "cpus": 4
   },
-  "postCreateCommand": "pip install --upgrade pip",
+  "waitFor": "onCreateCommand",
+  "updateContentCommand": "python3 -m pip install -r requirements.txt",
+  "postCreateCommand": "",
   "customizations": {
+    "codespaces": {
+      "openFiles": []
+    },
     "vscode": {
       "extensions": [
-        "ms-python.python",
-        "ms-python.vscode-pylance"
+        "ms-toolsai.jupyter",
+        "ms-python.python"
       ]
     }
   }
